--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "terminal.integrated.shellArgs.windows": null,
-  "python.pythonPath": "C:\\Users\\Pablo\\miniconda3\\envs\\tfg\\python.exe"
+  "terminal.integrated.shellArgs.windows": null
 }
