--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/chekcout@v1
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
-        with: 
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .
-          pip install -r requirements-dev.txt
-      - name: build with pyinstaller
-        run: |
-          python setup.exe bdist_app
-          
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .
+        pip install -r requirements-dev.txt
+    - name: build with pyinstaller
+      run: |
+        python setup.exe bdist_app
