--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "terminal.integrated.shellArgs.windows": null,
-  "python.pythonPath": "D:\\Bibliotecas\\Code\\Python\\tfg-Scan-Paint-clone\\venv\\python.exe"
+  "python.pythonPath": "D:\\Bibliotecas\\Code\\Python\\tfg-Scan-Paint-clone\\venv\\python.exe",
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true
 }
