--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "terminal.integrated.shellArgs.windows": null,
-  "python.pythonPath": "/home/pablo/code/python/firestore-signamed-util/venv/bin/python",
+  "python.pythonPath": "D:\\Bibliotecas\\code\\python\\tfg-Scan-Paint-clone\\venv\\python.exe",
   "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true
+  "python.linting.enabled": true,
+  "jupyter.jupyterServerType": "local"
 }
