--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "jupyter.jupyterServerType": "local"
+  "jupyter.jupyterServerType": "local",
+  "python.pythonPath": "C:\\Users\\Pablo\\miniconda3\\python.exe"
 }
